[package]
name = "solana-addres-lookup-table-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-account = "2.1.16"
solana-account-decoder = "2.1.16"
solana-client = "2.1.16"
solana-instruction = "2.1.16"
solana-program = "2.1.16"
solana-pubkey = "2.1.16"
solana-sdk = "2.1.16"
solana-signature = "2.1.16"
solana-transaction-status = "2.1.16"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs"] }
tokio-stream = "0.1.17"
spl-associated-token-account = "6.0.0"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
base64 = "=0.22.1"
spl-token = "7.0.0"